Fixing horizontal scroll issues, virtualizing the header, calculating page sizes.

--- a/src/themes/material/extends/_grid.scss
+++ b/src/themes/material/extends/_grid.scss
@@ -97,7 +97,7 @@
 }
 
 %grid-cell-header {
-    display: flex;
+    display: inline-flex;
     position: relative;
     flex-flow: row nowrap;
     align-items: center;
